[gd_scene load_steps=11 format=2]

[ext_resource path="res://states/play/PlayScene.gd" type="Script" id=1]
[ext_resource path="res://gui/Fader.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/stageup.wav" type="AudioStream" id=4]
[ext_resource path="res://states/play/Camera.gd" type="Script" id=5]
[ext_resource path="res://gui/PlayGUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://states/gameover/game_over.tscn" type="PackedScene" id=7]
[ext_resource path="res://states/pause/Pause.tscn" type="PackedScene" id=8]
[ext_resource path="res://audio/low_boom.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/life.wav" type="AudioStream" id=10]

[node name="View" type="Node"]
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": "We use this node to shake the default canvas, emulating camera shake."
}

[node name="Level" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Player" parent="Level" instance=ExtResource( 3 )]

[node name="GUI" parent="Level" instance=ExtResource( 6 )]

[node name="GameOver" parent="Level" instance=ExtResource( 7 )]

[node name="Fader" parent="Level" instance=ExtResource( 2 )]

[node name="ExtraLifeSound" type="AudioStreamPlayer" parent="Level"]
stream = ExtResource( 10 )
volume_db = -12.0
__meta__ = {
"_editor_description_": "No 2D player as we do not need position for this sound"
}

[node name="LevelStartSound" type="AudioStreamPlayer" parent="Level"]
stream = ExtResource( 4 )
__meta__ = {
"_editor_description_": "No 2D player as we do not need position for this sound"
}

[node name="GameOverBoom" type="AudioStreamPlayer" parent="Level"]
stream = ExtResource( 9 )
__meta__ = {
"_editor_description_": "No 2D player as we do not need position for this sound"
}

[node name="SaucerCreationTimer" type="Timer" parent="Level"]
wait_time = 5.0
autostart = true

[node name="PauseCanvasLayer" parent="." instance=ExtResource( 8 )]
pause_mode = 2
[connection signal="shake" from="Level" to="." method="_on_Level_shake"]
[connection signal="game_over" from="Level/Player" to="Level" method="_on_Player_game_over"]
[connection signal="player_died" from="Level/Player" to="Level" method="_on_Player_player_died"]
[connection signal="player_warp" from="Level/Player" to="Level" method="_on_Player_player_warp"]
[connection signal="fade_finished" from="Level/Fader" to="Level" method="_on_Fader_fade_finished"]
[connection signal="timeout" from="Level/SaucerCreationTimer" to="Level" method="_on_SaucerCreationTimer_timeout"]
